kubernetes/traefik/traefik-namespace.yaml
---
# Creating namespace for traefik to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
