kubernetes/traefik/traefik-deployment-patch.yaml
# Add autoupdate through keel for traefik
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  annotations:
    keel.sh/policy: patch
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
