kubernetes/traefik/traefik-service-kubevip.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-kubevip
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "60"
spec:
  selector:
    app.kubernetes.io/name: traefik
  loadBalancerClass: kube-vip.io/kube-vip-class
  type: LoadBalancer
  loadBalancerIP: 10.10.10.35
  ports:
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: websecure
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: metrics
