kubernetes/traefik/traefik-service-tailscale.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale
  namespace: traefik
  annotations:
    tailscale.com/hostname: kubernetes-traefik
    argocd.argoproj.io/sync-wave: "30"
spec:
  selector:
    app.kubernetes.io/name: traefik
  loadBalancerClass: tailscale
  type: LoadBalancer
  ports:
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: websecure
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: metrics
