kubernetes/traefik/traefik.yaml
---
# Creating namespace for traefik to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-kubevip
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  loadBalancerClass: kube-vip.io/kube-vip-class
  type: LoadBalancer
  loadBalancerIP: 10.10.10.34
  ports:
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: websecure
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  loadBalancerClass: tailscale
  type: LoadBalancer
  ports:
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: websecure
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: metrics
---
# Create middlewares for traefik, including headers, ratelimit and middlewares for routing certain apps correctly
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: secureheaders
  namespace: traefik
spec:
  headers:
    accessControlAllowOriginList:
        - https://kubernetes.timo.be
        - https://timo.be
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true       
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
    customRequestHeaders:
        X-Forwarded-Proto: https
    customFrameOptionsValue: SAMEORIGIN
    hostsProxyHeaders:
        - X-Forwarded-Host
    customResponseHeaders:
        X-Robots-Tag: "noindex,nofollow"
        Permissions-Policy: "geolocation=(), microphone=(), camera=(), payment=(), usb=(), vr=()"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: traefik
spec:
  rateLimit:
    average: 200
    burst: 200
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: accountsredirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "(.)*"
    replacement: "https://auth.timo.be/realms/HomeServer/account/#/security/linked-accounts"
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: statusredirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "(.)*"
    replacement: "https://uptime.timo.be/status/default"
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://traefik-forward-auth.authentication:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
