kubernetes/traefik/traefik-dashboard.yaml
---
# Deploy traefik dashboard with the middlewares
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "40"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
