kubernetes/traefik/traefik-homebridge.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebridge.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: homebridge-svc
          port: 8581
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge-svc
  namespace: traefik
spec:
  externalName: homebridge.home.timo.be # Can also be an IP address
  type: ExternalName
