kubernetes/traefik/traefik-proxmox.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: proxmox-svc
          port: 443
          serversTransport: proxmox-serverstransport
  tls:
    secretName: wildcard-timo-be-production-tls
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-svc
  namespace: traefik
spec:
  externalName: sectorfive.local.timo.be # Can also be an IP address
  type: ExternalName
