kubernetes/traefik/traefik-scrypted.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scrypted
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "40"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`scrypted.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: scrypted-svc
          port: 10443
          scheme: https
          serversTransport: scrypted-serverstransport
---
apiVersion: v1
kind: Service
metadata:
  name: scrypted-svc
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  externalName: scrypted.home.timo.be # Can also be an IP address
  type: ExternalName
