kubernetes/traefik/traefik-sunshine.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sunshine
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "40"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sunshine.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: sunshine-svc
          port: 47990
          scheme: https
          serversTransport: sunshine-serverstransport
---
apiVersion: v1
kind: Service
metadata:
  name: sunshine-svc
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  externalName: gamingvm.local.timo.be # Can also be an IP address
  type: ExternalName
