kubernetes/traefik/traefik-truenas.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: truenas-svc
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-svc
  namespace: traefik
spec:
  externalName: truenas.local.timo.be # Can also be an IP address
  type: ExternalName
